[tool.poetry]
name = "game-generator"
version = "0.1.0"
description = ""
authors = ["Saad-Azi <sunnyaziz120@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
crewai = "^0.51.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
